--- a/.gitignore
+++ b/.gitignore
@@ -146,4 +146,7 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/python,windows,visualstudiocode
 
-*.h
+Include/
+tcl/
+Scripts/
+.vscode/
